# mixing-cfd-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md  PHASE_2A_PLAN.md
src/mixing_cfd_mcp/: __init__.py  cli.py  server.py
src/mixing_cfd_mcp/analysis/: __init__.py  kpis.py  result_parser.py  rn_curves.py  slice_data.py
src/mixing_cfd_mcp/core/: __init__.py  config_store.py  registry.py  response.py
src/mixing_cfd_mcp/export/: __init__.py  qmd_report.py  summary_table.py
src/mixing_cfd_mcp/models/: __init__.py  base.py  config.py  diffuser.py  eductor.py  fluid.py  internals.py  mechanical.py  ports.py  recirculation.py  regions.py  results.py  simulation.py  tank.py  unions.py
src/mixing_cfd_mcp/openfoam/: __init__.py  case_builder.py  function_objects.py  job_manager.py  mrf.py  snappy_hex_mesh.py
tests/: __init__.py  test_analysis.py  test_case_builder.py  test_export.py  test_models.py  test_phase2.py  test_roundtrip.py  test_validation.py
