[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mixing-cfd-mcp"
version = "0.1.0"
description = "Universal tank mixing CFD analysis via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Circle H2O LLC" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.4.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openfoam = [
    "foamlib>=0.7.0",
]
visualization = [
    "pyvista>=0.42.0",
    "vtk>=9.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "mixing-cfd-mcp[openfoam,visualization,dev]",
]

[project.scripts]
mixing-cfd-mcp = "mixing_cfd_mcp.server:main"
mixing-cfd = "mixing_cfd_mcp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mixing_cfd_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
